# ibkr-ai-broker

./: .env.example  .env.ibkr  .gitignore  .kill_switch_state  .pre-commit-config.yaml  AGENTS.md  PROGRESS.md  QUICKSTART.md  README.md  ROADMAP.md  RUNBOOK.md  SWAGGER_TEST_GUIDE.md  TEST_REPORT.md  TEST_RESULTS.md  pyproject.toml  risk_policy.yml  test_account_du0369590.ps1  test_all_endpoints.ps1  test_api_simple.ps1  test_complete_flow.ps1  test_complete_flow_forced.ps1  test_du1234567.ps1  test_full_flow.ps1  test_ibkr_connection.ps1  test_openwebui_integration.ps1  test_order_proposal.ps1  test_order_proposal.sh  test_output.txt  test_portfolio_fix.ps1  test_quick.py  test_risk_evaluation.ps1  test_simulation.ps1
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
apps/assistant_api/: __init__.py  main.py
apps/dashboard/: README.md  __init__.py  main.py
apps/mcp_server/: README.md  __init__.py  main.py  run.py  test_client.py
config/: auto_approval_policy.json  mcp_policy.example.json
data/: .gitkeep
docs/: IBKR_REAL_CONNECTION.md  LIVE_TRADING.md  OPEN_WEBUI_FIXES_SUMMARY.md  OPEN_WEBUI_TEST_RESULTS.md  dashboard-quickstart.md  sprint-0-test-report.md  sprint-1-test-report.md  sprint-2-test-report.md  sprint-3-test-report.md  sprint-4-test-report.md  sprint-5-test-report.md  sprint-6-test-report.md  sprint-7-test-report.md  testing-guide.md
infra/: docker-compose.yml  init-db.sql
scripts/: create_test_proposals.py
tests/: test_advanced_risk_engine.py  test_advanced_risk_engine_mini.py  test_alerting.py  test_approval_service.py  test_assistant_api.py  test_assistant_api_flex_query.py  test_audit_backup.py  test_audit_store.py  test_audited_adapter.py  test_auto_approval.py  test_auto_approval_policy.py  test_auto_approval_policy_integration.py  test_broker_adapter.py  test_broker_factory.py  test_e2e_order_flow.py  test_feature_flags.py  test_flex_query_scheduler.py  test_flex_query_schemas.py  test_flex_query_service.py  test_health_check.py  test_ibkr_real.py  test_instrument_api.py  test_instrument_resolver.py  test_integrated_risk.py  test_kill_switch.py  test_live_config.py  test_live_readiness.py  test_live_trading_api.py  test_market_data.py  test_market_data_api.py  test_mcp_flex_query.py  test_mcp_request_approval.py  test_mcp_request_cancel.py  test_mcp_security.py  test_mcp_server.py  test_metrics_collector.py  test_middleware.py  test_order_cancel_schemas.py  test_order_intent.py  test_order_submission.py  (+16 more)
